Patch03 local edits 01 (#23)
* changed direction of slash in reference to project 6.
Goal: work with amplify

* changed direction of slash in reference to project 6.
Goal: work with amplify

* deleted python, published branch, added icon
Deleted python,
Deleted flask template
Added dropdown menue on helloWorld_html.html
added icon
changed js in new-tab.html, so that errorlogs are printed in a new paragraph.
Changed helloWorld_html.html for clarity

--- a/helloWorld/helloWorld_css.css
+++ b/helloWorld/helloWorld_css.css
@@ -4,6 +4,7 @@
 				--main-bg:  #d2c8ff;
 				--second-bg: #d1dcff;
 				--emp-color: #146414;
+				--text-color: #000000;
 				--title-font: 'El Messiri', sans-serif;
 				--text-font:  'Fredoka', sans-serif;
 				--emp-font:  'Sacramento', cursive;
@@ -19,21 +20,72 @@
 			}
 
 			.title{
+				margin: auto;
+				position: center;
+				width: fit-content;
+				padding: 10px;
 				font-size: 20px;
-				/*width: 325px;*/
 				text-align: center;
 				border-style: double;
 				font-family: var(--title-font);
 				background-color: var(--second-bg);
 			}
 
-			.section{
+			.section {
 				/*border-style: solid;
 				border-color: var(--second-bg);*/
 				font-family: var(--text-font);
-			
+
+			}
+			/***Code For Dropdown Menu***/
+			.dropdown-button {
+				background-color: var(--second-bg);
+				color: var(--emp-color);
+				padding: 16px;
+				font-family: var(--emp-font);
+				font-size: 2em;
+				border: solid 2px var(--emp-color);
+				cursor: pointer;
+				box-shadow: 8px 16px 32px 0px rgba(0, 0, 0, 0.2);
+				z-index: 1;
+			}
+			.dropdown {
+				position: relative;
+				display: inline-block;
 			}
 
+			.dropdown-content {
+				display: none;
+				position: absolute;
+				background-color: var(--main-bg);
+				min-width: 160px;
+				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+				z-index: 1;
+			}
+
+			.dropdown-content a {
+				color: var(--text-color);
+				padding: 12px 16px;
+				text-decoration: none;
+				display: block;
+			}
+
+			.dropdown-content a:hover {
+				background-color: var(--second-bg);
+				color: var(--emp-color);
+			}
+
+			.dropdown:hover .dropdown-content {
+				display: block;
+			}
+
+			.dropdown:hover .dropdown-button {
+				background-color: var(--emp-color);
+				color: var(--second-bg);
+				border-color: var(--second-bg);
+			}
+
+			/*** Continue with section formatting ***/
 			.HiLevel{
 				text-align: center;
 				background-color: var(--second-bg);
@@ -67,7 +119,7 @@
 			}
 
             #it{
-                font-size: 500px
+                font-size: 500px;
                 text-align: center;
                 border-style: dashed;
                 font-family: var(--title-font);
@@ -82,7 +134,6 @@
                 border: 1px solid black;
                 background-color: #FFFFFF;
                 padding: 0;
-                margin: 0;
-                margin-bottom: 1rem;
-                display: block;
+				margin: 0 0 1rem;
+				display: block;
             }
