--- a/Huetopia/stylesheets/styles.css
+++ b/Huetopia/stylesheets/styles.css
@@ -73,7 +73,7 @@ html {
 @media only screen and (max-width: 600px) {
     /* xs */
     [class*="col-"] {
-        border: 1px solid red;
+        border: 1px solid rgb(255, 0, 0);
     }
 }
 
@@ -82,7 +82,7 @@ html {
     /* s */
     /* For tablets */
     [class*='col-'] {
-        border: 1px solid green;
+        border: 1px solid rgb(0, 255, 0);
     }
     .col-s-1 {width: 8.33%;}
     .col-s-2 {width: 16.66%;}
@@ -103,7 +103,7 @@ html {
     /* m */
     /* For desktop */
     [class*='col-'] {
-        border: 1px solid blue;
+        border: 1px solid rgb(0, 0, 255);
     }
     .col-m-1 {width: 8.33%;}
     .col-m-2 {width: 16.66%;}
@@ -123,7 +123,7 @@ html {
 @media only screen and (min-width: 992px) {
     /* l */
     [class*="col-"] {
-        border: 1px solid cyan;
+        border: 1px solid rgb(0, 255, 255);
     }
 }
 
@@ -131,6 +131,18 @@ html {
 @media only screen and (min-width: 1200px) {
     /* xl */
     [class*="col-"] {
-        border: 1px solid magenta;
+        border: 1px solid rgb(255, 0, 255);
     }
+    .col-xl-1 {width: 8.33%;}
+    .col-xl-2 {width: 16.66%;}
+    .col-xl-3 {width: 25%;}
+    .col-xl-4 {width: 33.33%;}
+    .col-xl-5 {width: 41.66%;}
+    .col-xl-6 {width: 50%;}
+    .col-xl-7 {width: 58.33%;}
+    .col-xl-8 {width: 64.66%;}
+    .col-xl-9 {width: 75%;}
+    .col-xl-10 {width: 83.33%;}
+    .col-xl-11 {width: 91.66%;}
+    .col-xl-12 {width: 100%;}
 }
