--- a/Huetopia/stylesheets/styles.css
+++ b/Huetopia/stylesheets/styles.css
@@ -1,30 +1,58 @@
+/************************************/
+/* Making sizing include padding */
 * {
     box-sizing: border-box;
 }
+/************************************/
 
+/************************************/
+/* Ensuring that rows are on a new line */
 .row::after {
     content: "";
     clear: both;
     display: table;
 }
+/************************************/
 
+/************************************/
+/* setting up columns to go left */
 [class*="col-"]{
     float: left;
     padding: 15px;
-    border: 1px solid red;
 }
+/************************************/
 
+/************************************/
+/* Generic styling */
 html {
     font-family: 'Lucida Sans', serif;
 }
+/************************************/
 
-.header, .footer{
+/************************************/
+/* header */
+.header{
     background-color: #d2c8ff;
     color: #000000;
     text-align: center;
     padding: 15px;
 }
+/************************************/
 
+/************************************/
+/* navbar */
+.xl-only {
+    background-color: #146414;
+    color: #d2c8ff;
+}
+
+.navbar ul li a {
+    color: #d1dcff;
+}
+/************************************/
+
+/************************************/
+/* menu */
 .menu ul {
     list-style-type: none;
     margin: 0;
@@ -47,8 +75,15 @@ html {
     background-color: #a7bcff;
 }
 
+.menu li a {
+    text-decoration: none;
+}
+/************************************/
+
+/************************************/
+/* aside */
 .aside {
-    background-color: #d1dcff;
+    background-color: #a7bcff;
     padding: 15px;
     color: #000000;
     font-size: 14px;
@@ -58,25 +93,48 @@ html {
 .aside h2 {
     text-align: center;
 }
+/************************************/
 
+/************************************/
+/* footer */
 .footer {
-    font-size: 10px;
+    background-color: #beb4ff;
+    font-size: 0.8rem;
     padding: 15px;
+    color: #000000;
 }
+/************************************/
 
+
+/************************************/
 /* For mobile phones: */
 [class*='col-'] {
     width: 100%;
 }
 
+/*************************************************/
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     /* xs */
     [class*="col-"] {
         border: 1px solid rgb(255, 0, 0);
     }
+    .col-xs-1 {width: 8.33%;}
+    .col-xs-2 {width: 16.66%;}
+    .col-xs-3 {width: 25%;}
+    .col-xs-4 {width: 33.33%;}
+    .col-xs-5 {width: 41.66%;}
+    .col-xs-6 {width: 50%;}
+    .col-xs-7 {width: 58.33%;}
+    .col-xs-8 {width: 64.66%;}
+    .col-xs-9 {width: 75%;}
+    .col-xs-10 {width: 83.33%;}
+    .col-xs-11 {width: 91.66%;}
+    .col-xs-12 {width: 100%;}
 }
+/*************************************************/
 
+/*************************************************/
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
     /* s */
@@ -97,7 +155,9 @@ html {
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
 }
+/*************************************************/
 
+/*************************************************/
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
     /* m */
@@ -118,21 +178,41 @@ html {
     .col-m-11 {width: 91.66%;}
     .col-m-12 {width: 100%;}
 }
+/*************************************************/
 
+/*************************************************/
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     /* l */
     [class*="col-"] {
         border: 1px solid rgb(0, 255, 255);
     }
+    .col-l-1 {width: 8.33%;}
+    .col-l-2 {width: 16.66%;}
+    .col-l-3 {width: 25%;}
+    .col-l-4 {width: 33.33%;}
+    .col-l-5 {width: 41.66%;}
+    .col-l-6 {width: 50%;}
+    .col-l-7 {width: 58.33%;}
+    .col-l-8 {width: 64.66%;}
+    .col-l-9 {width: 75%;}
+    .col-l-10 {width: 83.33%;}
+    .col-l-11 {width: 91.66%;}
+    .col-l-12 {width: 100%;}
 }
+/*************************************************/
 
+/*************************************************/
 /* Extra large devices (large laptops and desktops, 1200px and up)*/
 @media only screen and (min-width: 1200px) {
     /* xl */
+    div.xl-only {
+        height: 10%;
+    }
     [class*="col-"] {
         border: 1px solid rgb(255, 0, 255);
     }
+
     .col-xl-1 {width: 8.33%;}
     .col-xl-2 {width: 16.66%;}
     .col-xl-3 {width: 25%;}
@@ -146,3 +226,13 @@ html {
     .col-xl-11 {width: 91.66%;}
     .col-xl-12 {width: 100%;}
 }
+/*************************************************/
+
+/*************************************************/
+/* Only displayed on extra large devices */
+@media only screen and (max-width: 1200px){
+    div.xl-only {
+        display: none;
+    }
+}
+/*************************************************/
