--- a/Huetopia/stylesheets/styles.css
+++ b/Huetopia/stylesheets/styles.css
@@ -1,3 +1,11 @@
+/*
+ * Copyright (c) 2022.  BraveGrumpy.
+ * Do not reproduce contents without express written permission from the author.
+ * You can get permission by cloning the repository https://github.com/robin-zollner/bravegrumpy.website.git, and creating a new branch.
+ * Otherwise, you can email seacrestskylar@gmail.com, or join the discord server, linked within each page.
+ * The purpose of this website, is to practice responsive web design, and to publish creative writing.
+ */
+
 /************************************/
 /* Making sizing include padding */
 * {
@@ -41,13 +49,49 @@ html {
 
 /************************************/
 /* navbar */
-.xl-only {
-    background-color: #146414;
-    color: #d2c8ff;
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar li {
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color: #d1dcff;
+    color: #000000;
+    box-shadow: 0 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .navbar ul li a {
-    color: #d1dcff;
+    color: #000000;
+    text-decoration: none;
+}
+
+.navbar ul li .dropdown-content{
+    display: none;
+    background-color: #a7bcff;
+    /*box-shadow: 0 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);*/
+}
+
+.navbar li:hover, .navbar .dropdown-button:hover, .navbar .dropdown:hover{
+    background-color: #a7bcff;
+}
+
+.dropdown-content a {
+    display: block;
+    padding: 2px 6px;
+    text-decoration: none;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #d1dcff;
+    color: #000000;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 /************************************/
 
@@ -111,14 +155,29 @@ html {
 [class*='col-'] {
     width: 100%;
 }
+/************************************/
+
+/*************************************************/
+/* portrait mode */
+@media only screen and (orientation: portrait) {
+    [class*='col-'] {
+        width: 100%;
+        /* Uncomment the below line to see blocking guides*/
+        /*border: 1px solid orange;*/
+    }
+}
+
+
 
 /*************************************************/
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     /* xs */
-    [class*="col-"] {
+
+    /* Uncomment the below line to see blocking guides*/
+    /*[class*="col-"] {
         border: 1px solid rgb(255, 0, 0);
-    }
+    }*/
     .col-xs-1 {width: 8.33%;}
     .col-xs-2 {width: 16.66%;}
     .col-xs-3 {width: 25%;}
@@ -139,9 +198,13 @@ html {
 @media only screen and (min-width: 600px) {
     /* s */
     /* For tablets */
+
+    /* Uncomment the below line to see blocking guides*/
+    /*
     [class*='col-'] {
         border: 1px solid rgb(0, 255, 0);
-    }
+    }*/
+
     .col-s-1 {width: 8.33%;}
     .col-s-2 {width: 16.66%;}
     .col-s-3 {width: 25%;}
@@ -162,9 +225,11 @@ html {
 @media only screen and (min-width: 768px) {
     /* m */
     /* For desktop */
-    [class*='col-'] {
+
+    /* Uncomment the below line to see blocking guides*/
+    /*[class*='col-'] {
         border: 1px solid rgb(0, 0, 255);
-    }
+    }*/
     .col-m-1 {width: 8.33%;}
     .col-m-2 {width: 16.66%;}
     .col-m-3 {width: 25%;}
@@ -184,9 +249,11 @@ html {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     /* l */
-    [class*="col-"] {
+
+    /* Uncomment the below line to see blocking guides*/
+    /*[class*="col-"] {
         border: 1px solid rgb(0, 255, 255);
-    }
+    }*/
     .col-l-1 {width: 8.33%;}
     .col-l-2 {width: 16.66%;}
     .col-l-3 {width: 25%;}
@@ -206,12 +273,13 @@ html {
 /* Extra large devices (large laptops and desktops, 1200px and up)*/
 @media only screen and (min-width: 1200px) {
     /* xl */
-    div.xl-only {
-        height: 10%;
-    }
+
+    /* Uncomment the below line to see blocking guides*/
+    /*
     [class*="col-"] {
         border: 1px solid rgb(255, 0, 255);
     }
+    */
 
     .col-xl-1 {width: 8.33%;}
     .col-xl-2 {width: 16.66%;}
@@ -229,8 +297,24 @@ html {
 /*************************************************/
 
 /*************************************************/
+/* Extra-extra large devices (High res displays 1870 px and up) */
+@media only screen and (min-width: 1870px) {
+    /*xxl*/
+    /* Uncomment the below line to see blocking guides*/
+    /*[class*="col-"] {
+        border: 1px solid rgb(255, 255, 0);
+    }*/
+
+    /* comment out this code block if you want the navbar to display */
+    div.xl-only {
+        display: none;
+    }
+}
+/*************************************************/
+
+/*************************************************/
 /* Only displayed on extra large devices */
-@media only screen and (max-width: 1200px){
+@media only screen and (max-width: 1870px){
     div.xl-only {
         display: none;
     }
