--- a/Huetopia/stylesheets/styles.css
+++ b/Huetopia/stylesheets/styles.css
@@ -7,6 +7,16 @@
  */
 
 /************************************/
+/* Including Fonts also used in the rest of BraveGrumpy */
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri&family=Fredoka&family=Sacramento&display=swap');
+:root {
+    --title-font: 'El Messiri', sans-serif;
+    --text-font:  'Fredoka', sans-serif;
+    --emp-font:  'Sacramento', cursive;
+}
+/************************************/
+
+/************************************/
 /* Making sizing include padding */
 * {
     box-sizing: border-box;
@@ -32,9 +42,11 @@
 
 /************************************/
 /* Generic styling */
-html {
-    font-family: 'Lucida Sans', serif;
-}
+/* Uncomment line 48 and comment line 47 to use W3Schools font decision */
+    html {
+        font-family: var(--text-font), 'Lucida Sans', serif;
+        /* font-family: 'Lucida Sans', sans-serif;*/
+    }
 /************************************/
 
 /************************************/
@@ -44,6 +56,14 @@ html {
     color: #000000;
     text-align: center;
     padding: 15px;
+}
+
+.title {
+    font-family: var(--title-font);
+}
+
+.subtitle {
+    font-family: var(--emp-font);
 }
 /************************************/
 
@@ -97,6 +117,11 @@ html {
 
 /************************************/
 /* menu */
+.menu {
+    font-family: var(--title-font);
+    font-weight: normal;
+}
+
 .menu ul {
     list-style-type: none;
     margin: 0;
@@ -112,16 +137,27 @@ html {
 }
 .menu li a {
     text-decoration: none;
-    color: #000000;
+    color: #146414;
 }
 
-.menu li:hover {
+.menu li:hover{
     background-color: #a7bcff;
 }
 
 .menu li a {
     text-decoration: none;
 }
+/************************************/
+
+/************************************/
+/* center (body) */
+.center h2{
+    font-family: var(--title-font);
+}
+.center h3 {
+    font-family: var(--title-font);
+}
+
 /************************************/
 
 /************************************/
@@ -136,6 +172,7 @@ html {
 
 .aside h2 {
     text-align: center;
+    font-family: var(--title-font);
 }
 /************************************/
 
