--- a/Huetopia/stylesheets/styles.css
+++ b/Huetopia/stylesheets/styles.css
@@ -141,6 +141,7 @@ html {
     padding: 15px;
     color: #000000;
     font-size: 14px;
+    border: 1px solid red;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
