--- a/Huetopia/stylesheets/styles.css
+++ b/Huetopia/stylesheets/styles.css
@@ -7,6 +7,11 @@
  */
 
 /************************************/
+/* Including Fonts also used in the rest of BraveGrumpy */
+
+/************************************/
+
+/************************************/
 /* Making sizing include padding */
 * {
     box-sizing: border-box;
@@ -33,7 +38,7 @@
 /************************************/
 /* Generic styling */
 html {
-    font-family: 'Lucida Sans', serif;
+    font-family: 'Lucida Sans', sans-serif;
 }
 /************************************/
 
@@ -44,6 +49,9 @@ html {
     color: #000000;
     text-align: center;
     padding: 15px;
+    top: 0;
+    position: relative;
+    height: 10rem;
 }
 /************************************/
 
@@ -104,24 +112,51 @@ html {
 }
 
 .menu li {
-    padding: 8px;
-    margin-bottom: 7px;
+    padding: 10px;
+    margin-bottom: 10px;
     background-color: #d1dcff;
     color: #000000;
     box-shadow: 0 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
 .menu li a {
     text-decoration: none;
     color: #000000;
 }
 
-.menu li:hover {
+.menu li:hover{
     background-color: #a7bcff;
 }
 
 .menu li a {
     text-decoration: none;
 }
+/************************************/
+
+/************************************/
+/* center (body) */
+div.construction {
+    background-color: #000000;
+    font-size: 5rem;
+    text-align: center;
+    color: red;
+    font-family: 'Courier','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    transform: rotate(-10deg);
+    width: 100%;
+}
+
+p.construction {
+    background-color: #000000;
+    font-size: 1rem;
+    text-align: center;
+    color: red;
+    font-family: 'Courier','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    transform: rotate(10deg);
+    width: 100%;
+}
+
 /************************************/
 
 /************************************/
@@ -131,21 +166,30 @@ html {
     padding: 15px;
     color: #000000;
     font-size: 14px;
+    border-radius: 10%;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .aside h2 {
     text-align: center;
+    font-family: var(--title-font);
 }
 /************************************/
 
 /************************************/
 /* footer */
+.spacer {
+    height: 10rem;
+}
 .footer {
     background-color: #beb4ff;
     font-size: 0.8rem;
     padding: 15px;
     color: #000000;
+    bottom: 0;
+    position: relative;
+    height: 15%;
+    width: 100%;
 }
 /************************************/
 
@@ -200,8 +244,7 @@ html {
     /* For tablets */
 
     /* Uncomment the below line to see blocking guides*/
-    /*
-    [class*='col-'] {
+    /*[class*='col-'] {
         border: 1px solid rgb(0, 255, 0);
     }*/
 
@@ -230,6 +273,7 @@ html {
     /*[class*='col-'] {
         border: 1px solid rgb(0, 0, 255);
     }*/
+
     .col-m-1 {width: 8.33%;}
     .col-m-2 {width: 16.66%;}
     .col-m-3 {width: 25%;}
@@ -254,6 +298,7 @@ html {
     /*[class*="col-"] {
         border: 1px solid rgb(0, 255, 255);
     }*/
+    
     .col-l-1 {width: 8.33%;}
     .col-l-2 {width: 16.66%;}
     .col-l-3 {width: 25%;}
@@ -275,11 +320,9 @@ html {
     /* xl */
 
     /* Uncomment the below line to see blocking guides*/
-    /*
-    [class*="col-"] {
+    /*[class*="col-"] {
         border: 1px solid rgb(255, 0, 255);
-    }
-    */
+    }*/
 
     .col-xl-1 {width: 8.33%;}
     .col-xl-2 {width: 16.66%;}
