adding table styling

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -190,6 +190,10 @@ p.construction {
 /************************************/
 
 /************************************/
+
+
+
+/************************************/
 /* aside */
 .aside {
     margin-bottom: 3rem;
