adding basic table border.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -190,8 +190,12 @@ p.construction {
 /************************************/
 
 /************************************/
+/* table styling */
+table {
+    border: var(--dark0) 1px;
+}
 
-
+/************************************/
 
 /************************************/
 /* aside */
