--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,4 +19,9 @@
         <%= form.submit %>
     </div>
 
+    <div>
+        <%= form.label :status %><br>
+        <%= form.select, Visible::VALID_STATUSES, selected: article.status || 'public' %>
+    </div>
+
 <% end %>
