--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -6,7 +6,11 @@
 
     <p>
         <%= form.label :body %><br>
-        <%= form.text_area :comment %>
+        <%= form.text_area :body %>
+    </p>
+    <p>
+        <%= form.label :status %>
+        <%= form.select :status, Visible::VALID_STATUSES, selected: 'public'%>
     </p>
     <p> <%= form.submit %> </p>
 <% end %>
