--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,18 +12,7 @@
 </ul>
 
 <h2>Comments</h2>
-<%= render 'comments/comment'%>
-
-<% @article.comments.each do |comment| %>
-    <p>
-        <strong>Commentor:</strong>
-        <%= comment.commenter %>
-    </p>
-    <p>
-        <strong>Comment:</strong>
-        <%= comment.body %>
-    </p>
-<% end %>
+<%= render @article.comments %>
 
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
