Comments AND Article CRUD functionality complete.

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,7 +21,7 @@
 
     <div>
         <%= form.label :status %><br>
-        <%= form.select, Visible::VALID_STATUSES, selected: article.status || 'public' %>
+        <%= form.select :status, Visible::VALID_STATUSES, selected: article.status || "public" %>
     </div>
 
 <% end %>
